kubernetes/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: realtimedash
  name: realtimedash
  namespace: analytics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: realtimedash
  template:
    metadata:
      labels:
        app: realtimedash
    spec:
      containers:
      - image: index.docker.io/addyvan/realtimedash:latest
        name: realtimedash
        ports:
          - containerPort: 8888
        resources:
          limits:
            memory: "512Mi"
            cpu: "0.15"
