kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: realtimedash
  namespace: analytics
spec:
  ports:
    - protocol: TCP
      port: 8888
  selector:
    app: realtimedash
